# tts-bridge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  PROTOCOL.md  README.md
.github/workflows/: ci.yml
examples/web-client/: index.html
src/: config.rs  health.rs  lib.rs  main.rs  proxy.rs
tests/: integration.rs
